# skills

./: .gitignore  .gitmodules  README.md
.claude-plugin/: marketplace.json
collaborating-with-coco/: README.md
collaborating-with-coco/scripts/: coco_bridge.py
favorites-curator/: SKILL.md
favorites-curator/scripts/: paths.py
metadata-naming/: SKILL.md
octocode/: NOTICE  README.md
octocode/scripts/: check_index.sh
skill-selector/: SKILL.md
skills/.claude/: implementation-notes-externalize-branding.md
skills/cli-help-layers/: README.md  SKILL.md
skills/exploration-tree/: README.md  SKILL.md
skills/octocode/: LICENSE  (+1 more)
skills/skill-iter/: .clawignore  README.md  SKILL.md  manifest.json  pyproject.toml
skills/skill-iter/agents/: interface.yaml
skills/skill-iter/docs/: 2026-04-16-skill-evolve-engine-design.md
skills/skill-iter/evals/: trigger_cases.json
skills/skill-iter/scripts/_deprecated/: analyze_trajectory.py  collect_feedback.py  merge_lessons.py  run_retrospective.py  should_improve.py  threat_scan.py
skills/skill-iter/src/skill_iter/: __init__.py  auditor.py  cli.py  config.py  gateway.py  llm.py  patch_generator.py  pending_store.py  pipeline.py  signal_extractor.py  threat_scan.py  trajectory.py  trigger_judge.py  watcher.py
skills/skill-iter/src/skill_iter/adapters/: __init__.py  base.py  log_adapter.py  null.py
skills/skill-iter/tests/: test_adapters.py  test_auditor.py  test_pending_store.py  test_trajectory.py  test_watcher.py
skills/skill-iter/tests/fixtures/: sample_format_a.md  sample_format_b.json  sample_format_c.jsonl
(+40 files in other folders)
